--- a/apps/App2/android/app/build.gradle
+++ b/apps/App2/android/app/build.gradle
@@ -79,9 +79,12 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
+    hermesCommand: "../../../../node_modules/hermes-engine/%OS-BIN%/hermesc",
+    composeSourceMapsPath: "../../../../node_modules/react-native/scripts/compose-source-maps.js",
+    cliPath: "../../../node_modules/react-native/cli.js",
 ]
 
-apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../../../node_modules/react-native/react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -309,7 +312,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
 def isNewArchitectureEnabled() {
     // To opt-in for the New Architecture, you can either:
